--- a/style/project.css
+++ b/style/project.css
@@ -115,7 +115,8 @@ body {
     margin-right: 7px;
 }
 
-a {
+
+.heart {
     display: flex;
     align-items: center;
 }
